[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Idle/PlayerIdle1.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/Idle/PlayerIdle2.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Run/PlayerRun1.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Run/PlayerRun2.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Run/PlayerRun3.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Run/PlayerRun4.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Run/PlayerRun5.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Run/PlayerRun6.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/Run/PlayerRun7.png" type="Texture" id=10]
[ext_resource path="res://assets/Player/Run/PlayerRun8.png" type="Texture" id=11]
[ext_resource path="res://assets/Player/Run/PlayerRun9.png" type="Texture" id=12]
[ext_resource path="res://assets/Player/Run/PlayerRun10.png" type="Texture" id=13]
[ext_resource path="res://assets/Player/Run/PlayerRun11.png" type="Texture" id=14]
[ext_resource path="res://assets/Player/Run/PlayerRun12.png" type="Texture" id=15]
[ext_resource path="res://assets/Player/PlayerJumpUp.png" type="Texture" id=16]
[ext_resource path="res://assets/Player/PlayerJumpDown.png" type="Texture" id=17]
[ext_resource path="res://assets/DarkParticles.tres" type="Material" id=18]
[ext_resource path="res://assets/LightParticles.tres" type="Material" id=19]
[ext_resource path="res://assets/FireParticles.tres" type="Material" id=20]
[ext_resource path="res://assets/IceParticles.tres" type="Material" id=21]
[ext_resource path="res://assets/Weapons+Items/Bow.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Sword.tscn" type="PackedScene" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 14.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "JumpUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "JumpDown",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "Flip"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0, 250.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "JumpDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3.3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "JumpUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.05135
height = 12.5504

[node name="Player" type="KinematicBody2D" groups=[
"character",
]]
collision_mask = 31
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Flip = SubResource( 5 )
anims/JumpDown = SubResource( 4 )
anims/JumpUp = SubResource( 3 )

[node name="Dark" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, 10 )
amount = 50
lifetime = 0.8
speed_scale = 1.2
explosiveness = 0.1
process_material = ExtResource( 18 )

[node name="Light" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, 10 )
amount = 50
lifetime = 0.8
speed_scale = 1.2
explosiveness = 0.1
process_material = ExtResource( 19 )

[node name="Fire" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, 10 )
amount = 50
lifetime = 0.8
speed_scale = 1.2
explosiveness = 0.1
process_material = ExtResource( 20 )

[node name="Ice" type="Particles2D" parent="."]
visible = false
position = Vector2( 0, 10 )
amount = 50
lifetime = 0.8
speed_scale = 1.2
explosiveness = 0.1
process_material = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.149895, 1.79868 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
rotation = 0.523598
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="AngleChecker" type="Node2D" parent="."]
editor/display_folded = true

[node name="Bow" type="Sprite" parent="AngleChecker"]
editor/display_folded = true
visible = false
position = Vector2( -0.0639906, 5.93751 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 22 )

[node name="ArrowSpawn" type="Position2D" parent="AngleChecker/Bow"]
position = Vector2( 6, 0 )

[node name="DashTween" type="Tween" parent="."]

[node name="StanceTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Sword" parent="." instance=ExtResource( 23 )]
visible = false
position = Vector2( 19, 0 )
rotation = 0.0142153
scale = Vector2( 0.3, 0.3 )

[node name="ArrowTimer" type="Timer" parent="."]
[connection signal="tween_completed" from="DashTween" to="." method="_on_DashTween_tween_completed"]
[connection signal="timeout" from="StanceTimer" to="." method="_on_StanceTimer_timeout"]
[connection signal="timeout" from="ArrowTimer" to="." method="_on_ArrowTimer_timeout"]
